@@ -11,7 +11,7 @@
 | Priorità             | `ALTA` |
 | Area                 | Sync catalogo cloud / Supabase — push prodotti (batch), no-op post-import, price push, outbox, UX `CloudSyncIndicator` |
 | Creato               | 2026-04-27 |
-| Ultimo aggiornamento | 2026-04-27 — seconda passata chiusa **PARTIAL**: fix locali no-op/dirty e stale-event coperti da JVM; ciclo B live con build patchata ancora da rieseguire; bulk non implementato |
+| Ultimo aggiornamento | 2026-04-28 — quinta passata **PARTIAL**: bulk product push client-side implementato con batch 100 + fallback 50/25/singolo, sync event massivi compatti, test JVM verdi; nessun cambio schema/RPC/outbox cleanup; serve ancora ciclo B live con lo stesso identico file |
 
 ---
 
@@ -28,6 +28,8 @@
 Dopo **TASK-067**, i log live mostrano ancora una sync molto lunga dominata da **PUSH_PRODUCTS** (push prodotto-per-prodotto con `batchSize=1`) e da **SYNC_PRICES_PUSH**.
 
 **Regola di gating:** *nessun* progetto di **bulk product push** e *nessuna* ottimizzazione di batch viene trattata come prioritaria finché non è superato il **no-op gate** (ciclo **B** — re-import identico dopo ciclo **A** documentato e precondizioni soddisfatte; vedi § *Ordine execution* e *Handoff*).
+
+**Nota quinta passata (2026-04-28):** questa regola resta valida come criterio di **validazione/chiusura live**, ma l'utente ha autorizzato esplicitamente l'implementazione client-side del bulk product push in questa sessione, mantenendo TASK-068 `PARTIAL` finché il ciclo B live non sarà verde.
 
 **Perimetro (sintesi):** bulk product dopo il gate; price da classificare senza fondere interventi che richiedono backend — **dettaglio in § *Perimetro: product bulk vs price optimization***.
 
@@ -92,16 +94,16 @@ Questo task ha eseguito il piano definito per: (1) dimostrare con evidenza se un
 
 | # | Criterio | Tipo verifica | Stato |
 |---|----------|---------------|-------|
-| 1 | **Re-import identico post-sync** (verifica **prioritaria**) con **precondizioni** § *No-op gate*: stesso file dopo sync completa; risultati classificati con **matrice log obbligatoria** | M + log | ⚠️ PARZIALE — ciclo B utente arrivato ad apply/sync e non no-op; ciclo B con build patchata non rieseguito |
-| 2 | **No-op gate:** se il re-import identico **non** è no-op → **root cause** documentata **prima** di bulk/batch | Review + log | ✅ ESEGUITO |
-| 3 | Se no-op è **corretto** ma push su **delta reale** resta lento → **bulk product upsert sicuro** (§ *Bulk product push sicuro*) | S / M + Review | ⚠️ NON ESEGUIBILE — gate live patchato non verde; bulk non autorizzato |
+| 1 | **Re-import identico post-sync** (verifica **prioritaria**) con **precondizioni** § *No-op gate*: stesso file dopo sync completa; risultati classificati con **matrice log obbligatoria** | M + log | ⚠️ PARZIALE — nuovo ciclo B live con build precedente alla terza patch fallisce ancora; serve rerun con questa patch |
+| 2 | **No-op gate:** se il re-import identico **non** è no-op → **root cause** documentata **prima** di bulk/batch | Review + log | ✅ ESEGUITO — FK churn supplier/category + synthetic price generato da product dirty falso |
+| 3 | Se no-op è **corretto** ma push su **delta reale** resta lento → **bulk product upsert sicuro** (§ *Bulk product push sicuro*) | S / M + Review | ⚠️ PARZIALE — bulk client implementato su istruzione esplicita utente (batch 100, fallback 50/25/singolo, single path preservato); manca smoke/live ciclo B e misura su delta reale |
 | 4 | **Nessuna regressione TASK-067** | B / S / JVM / M | ✅ ESEGUITO |
 | 5 | **Nessuna regressione TASK-066** | B / JVM / M | ✅ ESEGUITO |
 | 6 | **Nessun** cambio schema Room/Supabase, RLS, trigger, publication, RPC, migration live | Review | ✅ ESEGUITO |
 | 7 | **`syncEventOutboxPending`**: **classificata**; **mai** cancellazione manuale | M + Review + log | ✅ ESEGUITO |
 | 8 | **UX/copy** § *CloudSyncIndicator*: mapping fedele alle fasi reali; **nessun redesign ampio** | M | ✅ ESEGUITO |
-| 9 | **Price sync** § *Stop condition price push* + classificazione se 2° ciclo anomalo | Review + log | ⚠️ PARZIALE — causa locale price dirty coperta; price live post-patch da riclassificare dopo no-op |
-| 10 | **Test JVM** § *Test JVM minimi* | JVM + Review | ✅ ESEGUITO per no-op/dirty/sync/navigation; bulk tests N/A perché bulk non implementato |
+| 9 | **Price sync** § *Stop condition price push* + classificazione se 2° ciclo anomalo | Review + log | ⚠️ PARZIALE — synthetic price no-op corretto su JVM; price live post-terza patch da riclassificare |
+| 10 | **Test JVM** § *Test JVM minimi* | JVM + Review | ✅ ESEGUITO — no-op/dirty/sync/navigation + bulk success/fallback/partial retry/offline retry/outbox compatto |
 | 11 | Transizione **`PLANNING` → `EXECUTION`** registrata (2026-04-27); piano invariato; **nessun** lavoro implementativo in questo aggiornamento | Governance | ✅ |
 | 12 | **Concorrenza:** nessuna doppia sync catalogo in parallelo durante misurazione; overlap/race → classificato **prima** di ottimizzare batch | M + log | ✅ ESEGUITO su log A + test stale-event; ciclo B live patchato pending |
 
@@ -118,6 +120,7 @@ Legenda: B=Build, S=Static, M=Manual/live log, E=Emulator.
 | 3 | Piano raffinato integrato nel task ufficiale | Gate no-op, protocollo non distruttivo, albero decisionale, bulk sicuro, JVM minimi | 2026-04-27 |
 | 4 | Piano **operativo/misurabile** (quiet window, cicli A/B, matrice log, stop price, UX/JVM/risk estesi) | Integrazione documentale successiva | 2026-04-27 |
 | 6 | **`PLANNING` → `EXECUTION`** (2026-04-27) | Piano execution-ready approvato; lavoro reale **da svolgere**; **nessun** codice modificato in questo passaggio | 2026-04-27 |
+| 7 | Bulk product push implementato in quinta passata su richiesta esplicita utente | La richiesta del 2026-04-28 autorizza bulk persistente/offline-safe senza nuova RPC/schema e senza cancellare outbox, pur mantenendo TASK-068 `PARTIAL` fino al ciclo B live | 2026-04-28 |
 
 ---
 
@@ -338,6 +341,195 @@ Classificare: self-skip, temporaneo, accumulo reale — **senza cancellare**.
 
 ## Execution
 
+### Esecuzione — 2026-04-28, quinta passata bulk product push offline-safe
+
+**File modificati:**
+- `app/src/main/java/com/example/merchandisecontrolsplitview/data/InventoryRepository.kt` — `pushCatalogProducts` usa ora i dirty product refs esistenti/candidati Room e invia upsert prodotti in batch bounded (`100`) con fallback progressivo `50` / `25` / percorso singolo; `product_remote_refs` viene marcato synced solo dopo successo remoto; log `PUSH_PRODUCTS` esteso con `bulkEnabled`, `batchSize`, `batchCount`, `productsPushed`, `pushProductsMs`, fallback count.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/data/DefaultInventoryRepositoryTest.kt` — aggiunti test JVM per bulk success, sync event compatto, outbox compatto offline, fallback singolo, partial failure con retry idempotente e offline retry completo; fake remote esteso con attempt sizes e failure hook.
+- `docs/TASKS/TASK-068-bulk-product-push-verifica-no-op-post-full-import.md` — log quinta passata e stato finale ancora `PARTIAL`.
+- `docs/MASTER-PLAN.md` — tracking globale riallineato alla quinta passata.
+
+**Azioni eseguite:**
+1. Implementato bulk product push persistente/offline-safe senza nuova RPC e senza cambio schema Supabase/Room: il datasource remoto usava gia' `upsertProducts(List<InventoryProductRow>)`, quindi il cambio resta client-side nel repository.
+2. Preservato il percorso singolo come fallback e come path disattivabile tramite costante interna `PRODUCT_BULK_PUSH_ENABLED`.
+3. Implementato fallback progressivo: batch iniziale `100`, split a `50`, poi `25`, poi singolo; il singolo riusa la recovery esistente per conflitti `409` / `23505`.
+4. Aggiornamento refs locale solo dopo conferma remota: su batch riuscito viene aggiornato `lastSyncedLocalRevision` / `lastRemoteAppliedAt` in transazione; su failure/offline i refs restano dirty per retry.
+5. Reso compatto il record `sync_events` per commit massivi: se gli id superano `SYNC_EVENT_ENTITY_ID_BUDGET`, l'evento conserva `changedCount` ma invia `entityIds` vuoto, evitando payload enormi; in outbox viene salvato lo stesso payload compatto senza cancellare record esistenti.
+6. Nessun cambio a `SupabaseCatalogRemoteDataSource`, schema Supabase, RPC, RLS, trigger, migration live; nessuna cancellazione outbox/sync_events; nessuna nuova import analysis.
+7. UI non toccata: il comportamento resta database locale pronto e cloud sync in background secondo mapping/stage gia' introdotti nelle passate precedenti.
+
+**Check obbligatori:**
+| Check | Stato | Note |
+|-------|-------|------|
+| Build Gradle | ✅ ESEGUITO | `assembleDebug` verde |
+| Lint | ✅ ESEGUITO | `lintDebug` verde; warning AGP/Kotlin/toolchain preesistenti |
+| Warning nuovi | ✅ ESEGUITO | `compileDebugKotlin`, `compileDebugUnitTestKotlin`, suite JVM e `git diff --check` verdi; nessun warning Kotlin nuovo rilevato |
+| Coerenza con planning | ⚠️ PARZIALE | Bulk implementato su istruzione esplicita utente successiva al gate storico; invariati divieti su schema/RPC/outbox cleanup |
+| Criteri di accettazione | ⚠️ PARZIALE | Bulk JVM implementato e verificato; manca ciclo B live stesso file + misura prodotti/prezzi/outbox |
+
+**Baseline regressione TASK-004 (se applicabile):**
+- Test eseguiti: `DefaultInventoryRepositoryTest.068*`, `DefaultInventoryRepositoryTest.045*`, `DefaultInventoryRepositoryTest.041*`, `DefaultInventoryRepositoryTest.042*`, `DefaultInventoryRepositoryTest.043*`, suite larga `DefaultInventoryRepositoryTest`, `ImportAnalyzerTest`, `FullDbExportImportRoundTripTest`, `DatabaseViewModelTest`, `GeneratedExitDestinationResolverTest`, full `testDebugUnitTest`.
+- Test aggiunti/aggiornati: bulk product push batch 100/100/60 su 260 prodotti; compact catalog event con `changedCount=260` e ids vuoti; compact outbox offline; fallback split/singolo; partial failure con primo batch synced e tail dirty; offline totale con retry successivo.
+- Limiti residui: nessuno smoke live eseguito in questa sessione; il ciclo B live con lo stesso identico file resta obbligatorio prima di dichiarare `DONE FULL`.
+
+**Test / comandi eseguiti:**
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew compileDebugKotlin compileDebugUnitTestKotlin` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME=... ./gradlew testDebugUnitTest --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.*068*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.*045*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.*041*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.*042*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.*043*'` → ✅ `BUILD SUCCESSFUL`.
+- Primo run largo senza `JAVA_TOOL_OPTIONS` → ⚠️ fallito per ambiente ByteBuddy/MockK (`AttachNotSupportedException`), non per assert applicativi.
+- `JAVA_HOME=... JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading' ./gradlew testDebugUnitTest --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest' --tests 'com.example.merchandisecontrolsplitview.util.ImportAnalyzerTest' --tests 'com.example.merchandisecontrolsplitview.util.FullDbExportImportRoundTripTest' --tests 'com.example.merchandisecontrolsplitview.viewmodel.DatabaseViewModelTest' --tests 'com.example.merchandisecontrolsplitview.navigation.GeneratedExitDestinationResolverTest'` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew assembleDebug` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew lintDebug` → ✅ `BUILD SUCCESSFUL`.
+- Primo full `testDebugUnitTest` con `JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading'` → ⚠️ fallito per attach ByteBuddy/MockK (`AttachNotSupportedException`), non per assert applicativi.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener -XX:+EnableDynamicAgentLoading' ./gradlew --no-daemon testDebugUnitTest` → ✅ `BUILD SUCCESSFUL`.
+- `git diff --check` → ✅ nessun errore.
+
+**Incertezze:**
+- INCERTEZZA: manca misura live del nuovo bulk su Supabase reale; i test coprono il comportamento JVM/fake remote, non latenza/retry reali di rete.
+- INCERTEZZA: TASK-068 resta `PARTIAL` finche' non esiste un ciclo B live con stesso identico file, sync completa e quiet window 30-60s.
+- INCERTEZZA: `syncEventOutboxPending` non e' stato pulito; va osservato nel prossimo ciclo live per verificare che non cresca su import identico.
+
+**Handoff notes:**
+- Prossimo test manuale: stesso identico file due volte, sync completata e quiet window 30-60s tra ciclo A e ciclo B.
+- Atteso ciclo B: `updatedProducts=0` o quasi spiegato, `dirtyMarkedProducts=0` o spiegato, `dirtyMarkedPrices=0`, `productsPushed=0`, `pricesPushed=0`, `syncEventOutboxPending` non cresce per effetto dell'import identico.
+- Per delta reale massivo, verificare nei log `PUSH_PRODUCTS`: `batchSize=100`, `batchCount` proporzionale, `productsPushed` uguale al delta reale, `pushProductsMs` ridotto rispetto al precedente `batchSize=1`.
+- Se il bulk fallisce live, il percorso singolo e' ancora disponibile nel codice come fallback e la costante interna consente isolamento rapido.
+
+### Esecuzione — 2026-04-28, quarta passata price-aware/fingerprint
+
+**File modificati:**
+- `app/src/main/java/com/example/merchandisecontrolsplitview/data/ImportApplyModels.kt` — aggiunto payload diagnostico opzionale per conteggi/fingerprint dataset da riportare nell'apply.
+- `app/src/main/java/com/example/merchandisecontrolsplitview/data/InventoryRepository.kt` — `recordImportedCurrentAndPreviousPrices` ora viene chiamato sugli update solo se c'e' un delta prezzo reale; gli update relation/stock/name/item-only sporcano il prodotto ma non i prezzi; log `import_dirty_marking` esteso con fingerprint, classificazione dataset e sintesi relation/price.
+- `app/src/main/java/com/example/merchandisecontrolsplitview/util/ImportDatasetFingerprint.kt` — nuovo helper leggero per fingerprint normalizzato di Products/Suppliers/Categories/PriceHistory e snapshot DB.
+- `app/src/main/java/com/example/merchandisecontrolsplitview/util/FullDbImportStreaming.kt` — calcolo fingerprint workbook durante parsing streaming full DB senza loggare barcode/sample completi.
+- `app/src/main/java/com/example/merchandisecontrolsplitview/viewmodel/DatabaseViewModel.kt` — log full import arricchito con `fileProductCount`, `filePriceHistoryCount`, `dbProductCountBefore`, `dbPriceHistoryCountBefore`, fingerprint short e `classificazione_risultato`; diagnostica passata all'apply.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/data/DefaultInventoryRepositoryTest.kt` — aggiunti test supplier-only, category-only, stock-only, productName-only, purchasePrice-only e retailPrice-only.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/util/FullDbExportImportRoundTripTest.kt` — il re-import full DB con PriceHistory completa simula refs prodotto/prezzo gia' synced e verifica zero candidate product/price al ciclo B JVM.
+- `docs/TASKS/TASK-068-bulk-product-push-verifica-no-op-post-full-import.md` — log quarta passata e stato finale `PARTIAL`.
+- `docs/MASTER-PLAN.md` — tracking globale riallineato alla quarta passata.
+
+**Nuovo log live acquisito:**
+- `FULL_IMPORT SUCCESS products=18868 suppliers=80 categories=43 priceHistory=true`
+- `APPLY_IMPORT START previewId=1 new=0 updated=6052`
+- `import_dirty_marking ... productDirtyReasons=supplierId:5854,categoryId:174,stockQuantity:173,purchasePrice:129,productName:91 ... priceHistoryRows=37936 priceHistoryInserted=0 priceHistoryAlreadyPresent=37936 syntheticPriceCandidates=24208 syntheticPriceSkippedAlreadyRepresented=12141 dirtyMarkedPrices=12067 priceDirtyReason=syntheticProductPrice:12067,pendingPriceInsert:0`
+
+**Root cause aggiornata:**
+1. Il log live non e' un vero no-op gate perche' `test_import Database1.xlsx` (~18.868 prodotti / 37.936 price rows) e `Database_test_import 2.xlsx` (~19.697 prodotti / 41.108 price rows) sono dataset diversi.
+2. Resta pero' un bug reale: un update prodotto causato da relazione/stock/nome poteva ancora generare synthetic price tramite product dirty, soprattutto quando i vecchi prezzi del Products sheet differivano dai campi prodotto locali pur essendo gia' rappresentati dalla PriceHistory.
+3. La PriceHistory importata ora prevale: con `priceHistoryRows > 0` le righe sintetiche non sono usate come fallback generico per ogni product dirty; per gli update prodotto vengono generate solo sui tipi prezzo semanticamente cambiati.
+
+**Azioni eseguite:**
+1. Separata la dirty product logic dalla dirty price logic: `dirtyMarkedProducts` resta corretto per delta reali supplier/category/stock/name, ma `dirtyMarkedPrices` non cresce piu' per update non-price.
+2. Limitata la synthetic fallback agli update con delta `purchasePrice` / `retailPrice` o, solo in assenza di PriceHistory sheet, `oldPurchasePrice` / `oldRetailPrice`.
+3. Aggiunto fingerprint dataset short normalizzato e non sensibile su workbook e snapshot DB, con classificazione `no_op_candidate_same_dataset` vs `delta_reale_dataset_diverso`.
+4. Estesa la diagnostica live con `relationDirtyRealChangedCount`, `relationDirtySemanticEquivalentCount`, `relationDirtyUnknownCount`, `priceDirtyFromPriceFieldChange`, `priceDirtyFromSyntheticFallback`, `priceDirtySkippedBecauseNonPriceProductUpdate`.
+5. Nessun bulk product push implementato; nessuna modifica a schema Room/Supabase, RPC, RLS, trigger, migration; nessuna cancellazione outbox/sync_events.
+
+**Check obbligatori:**
+| Check | Stato | Note |
+|-------|-------|------|
+| Build Gradle | ✅ ESEGUITO | `assembleDebug` verde |
+| Lint | ✅ ESEGUITO | `lintDebug` verde; warning AGP/Kotlin/toolchain preesistenti |
+| Warning nuovi | ✅ ESEGUITO | `compileDebugKotlin`, `compileDebugUnitTestKotlin` e `git diff --check` verdi; nessun warning Kotlin nuovo rilevato |
+| Coerenza con planning | ✅ ESEGUITO | Fix limitato a apply import/diagnostica/test; bulk e schema esclusi |
+| Criteri di accettazione | ⚠️ PARZIALE | JVM/build/lint verdi; manca ciclo B live vero con stesso identico file due volte |
+
+**Baseline regressione TASK-004 (se applicabile):**
+- Test eseguiti: `DefaultInventoryRepositoryTest.068*`, `DefaultInventoryRepositoryTest.067*`, `ImportAnalyzerTest`, `FullDbExportImportRoundTripTest`, `DatabaseViewModelTest`, `GeneratedExitDestinationResolverTest`, full `testDebugUnitTest`.
+- Test aggiunti/aggiornati: supplier-only/category-only/stock-only/productName-only non sporcano prezzi; purchasePrice/retailPrice sporcano solo il tipo prezzo corretto; round-trip full DB ciclo B JVM verifica zero candidate product/price dopo sync simulata; fingerprint dataset propagato da full import ad apply.
+- Limiti residui: nessun ciclo B live eseguito da questa sessione; i file reali non sono fixture repo; `syncEventOutboxPending` resta da osservare senza cleanup manuale nel prossimo test live.
+
+**Test / comandi eseguiti:**
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew compileDebugKotlin compileDebugUnitTestKotlin` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME=... JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener' ./gradlew --no-daemon testDebugUnitTest --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.068*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.067*' --tests 'com.example.merchandisecontrolsplitview.util.ImportAnalyzerTest' --tests 'com.example.merchandisecontrolsplitview.util.FullDbExportImportRoundTripTest'` → ✅ `BUILD SUCCESSFUL` dopo fix del test round-trip per simulare refs synced prima del ciclo B.
+- `JAVA_HOME=... JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener' ./gradlew --no-daemon testDebugUnitTest --tests 'com.example.merchandisecontrolsplitview.viewmodel.DatabaseViewModelTest' --tests 'com.example.merchandisecontrolsplitview.ui.navigation.GeneratedExitDestinationResolverTest'` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew assembleDebug` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew lintDebug` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener' ./gradlew --no-daemon testDebugUnitTest` → ✅ `BUILD SUCCESSFUL`.
+- `git diff --check` → ✅ nessun errore.
+
+**Incertezze:**
+- INCERTEZZA: manca ancora evidenza live post-quarta-patch con lo stesso identico file due volte, sync completa e quiet window 30-60s.
+- INCERTEZZA: se il prossimo log resta con `updatedProducts>0`, la nuova `classificazione_risultato` e i fingerprint devono prima chiarire se e' dataset diverso o delta spurio.
+- INCERTEZZA: `syncEventOutboxPending` non e' stato modificato o pulito; va osservato nel ciclo B live.
+
+**Handoff notes:**
+- Stato resta **`PARTIAL`**. Non dichiarare `DONE FULL` senza ciclo B live vero.
+- Prossimo test manuale: usare lo stesso identico file due volte; non alternare `test_import Database1.xlsx` e `Database_test_import 2.xlsx`.
+- Atteso sul ciclo B verde: `updatedProducts=0` o quasi spiegato, `dirtyMarkedProducts=0` o spiegato, `dirtyMarkedPrices=0`, `productsPushed=0`, `pricesPushed=0`, `syncEventOutboxPending` non cresce per effetto dell'import identico.
+- Bulk product push resta vietato finche' il no-op gate live non e' verde.
+
+### Esecuzione — 2026-04-28, terza passata no-op FK/prezzi
+
+**File modificati:**
+- `app/src/main/java/com/example/merchandisecontrolsplitview/util/ImportAnalysis.kt` — preview import preserva `supplierId` / `categoryId` esistenti quando il nome importato è semanticamente uguale (trim/case/accent folded), anche se un duplicato locale avrebbe un ID diverso; analysis e apply condividono ora la stessa semantica.
+- `app/src/main/java/com/example/merchandisecontrolsplitview/data/InventoryRepository.kt` — apply import preserva FK esistenti per supplier/category semanticamente equivalenti; synthetic price rows vengono saltate quando la `PriceHistory` importata rappresenta già lo stesso product/type/price; log `import_dirty_marking` esteso con `relationDirtySample`, `priceRowsPendingBridgeBefore`, `syntheticPriceCandidates`, `syntheticPriceSkippedAlreadyRepresented`, `syntheticPriceBridgeCreated`, `syntheticPriceBridgeAlreadyExists`.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/util/ImportAnalyzerTest.kt` — test preview: supplier/category equivalenti con ID duplicato non generano FK churn quando cambia un altro campo.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/data/DefaultInventoryRepositoryTest.kt` — test apply: FK equivalenti preservate, cambio relazione reale sporca solo il prodotto target, product-only non genera dirty price se la PriceHistory rappresenta già i prezzi.
+- `app/src/test/java/com/example/merchandisecontrolsplitview/util/FullDbExportImportRoundTripTest.kt` — round-trip full DB aggiornato: con sheet `PriceHistory` completa non si generano righe sintetiche `IMPORT`; senza `PriceHistory` resta il comportamento sintetico.
+- `docs/TASKS/TASK-068-bulk-product-push-verifica-no-op-post-full-import.md` — log terza passata e stato finale.
+- `docs/MASTER-PLAN.md` — stato globale riallineato a `TASK-068 PARTIAL` terza passata, nessun task attivo, bulk non implementato.
+
+**Nuovo log live acquisito:**
+- `APPLY_IMPORT START previewId=1 new=0 updated=6052`
+- `import_dirty_marking productsTouched=6052 updatedProducts=6052 dirtyMarkedProducts=6052 productDirtyReasons=supplierId:5854,categoryId:174,stockQuantity:173,purchasePrice:129,productName:91 priceHistoryInserted=0 priceHistoryAlreadyPresent=41108 dirtyMarkedPrices=24046 priceDirtyReason=syntheticProductPrice:24046,pendingPriceInsert:0 priceRowsPendingBridgeAfter=24046`
+- `PUSH_PRODUCTS batchSize=1 batchCount=6052 pushProductsMs=615175`
+- `SYNC_PRICES_PUSH pricesPushed=24046 batchSize=80 batchCount=301`
+- `cycle=catalog_push outcome=ok reason=local_commit durationMs=679572 dirtyHints=6052 productsPushed=6052 pricesPushed=24046 syncEventOutboxPending=815`
+
+**Root cause aggiornata:**
+1. Root cause primaria: **FK churn supplier/category**. Il preview/apply poteva risolvere il nome importato verso un supplier/category semanticamente uguale ma con ID diverso; poi `productsEquivalentForImportDirty` confrontava gli ID e marcava dirty. Il log `supplierId:5854` conferma che questo era il contributore principale.
+2. Root cause price: `dirtyMarkedPrices=24046` nasceva da `recordImportedCurrentAndPreviousPrices` sui 6.052 prodotti falsamente aggiornati. Anche con `priceHistoryInserted=0`, la product dirty falsa generava righe sintetiche `IMPORT`/`IMPORT_PREV` senza bridge, poi candidate al push prezzi.
+3. Root cause di test file: i due file reali citati non sono identici (`test_import Database1.xlsx` ~18.868 prodotti / 37.936 price rows; `Database_test_import 2.xlsx` ~19.695 prodotti / 41.108 price rows). Il no-op gate live deve usare lo **stesso identico file** due volte dopo sync completa.
+
+**Decisione Gate 3 / bulk:**
+- **Bulk product push non implementato.**
+- Motivo: il nuovo log live conferma che il gate no-op era ancora rosso prima di questa terza patch. La patch corregge le cause locali testabili, ma manca ancora evidenza live con la nuova build.
+
+**Price classification:**
+- `priceHistoryInserted=0` + `syntheticProductPrice=24046` era effetto secondario dei product dirty falsi.
+- La nuova logica salta la synthetic row se la `PriceHistory` importata contiene già lo stesso prezzo per product/type; i candidati price push tornano basati su righe `ProductPrice` reali senza remote ref.
+- Se un futuro ciclo B con questa patch mostra ancora `dirtyMarkedPrices>0`, leggere `syntheticPriceCandidates`, `syntheticPriceSkippedAlreadyRepresented`, `priceRowsPendingBridgeBefore/After` e `priceDirtyReason`.
+
+**Outbox classification:**
+- `syncEventOutboxPending` cresce fino a `815`; non è stato cancellato nulla.
+- Classificazione invariata: accumulo reale/non convergente da indagare a parte, probabilmente collegato a eventi inutili generati dai dirty falsi più `PayloadValidation` già osservato. Verificare dopo no-op live: se `productsPushed=0` e `pricesPushed=0`, l’outbox non deve crescere per effetto dell’import identico.
+
+**Test / comandi eseguiti:**
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew compileDebugKotlin compileDebugUnitTestKotlin` → ✅ `BUILD SUCCESSFUL`; warning Compose/toolchain preesistenti.
+- `JAVA_HOME=... JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener' ./gradlew --no-daemon testDebugUnitTest --tests 'com.example.merchandisecontrolsplitview.util.ImportAnalyzerTest' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.068*' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.067 supplier and category equivalent after temp resolution do not dirty product' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.067 medium full import price sheet does not scale dirty set with total rows' --tests 'com.example.merchandisecontrolsplitview.data.DefaultInventoryRepositoryTest.067 full import with identical bridged price history does not dirty the catalog'` → ✅ `BUILD SUCCESSFUL`.
+- Primo rerun round-trip mirato → ❌ test storico aspettava righe sintetiche `IMPORT` anche con `PriceHistory` completa.
+- Fix test/contratto: con `PriceHistory` rappresentativa il full import non deve creare synthetic rows; il test `RT-NOPH` continua a coprire il caso senza PriceHistory.
+- Rerun round-trip/sync/navigation mirato → ✅ `BUILD SUCCESSFUL`.
+- Rerun largo `DefaultInventoryRepositoryTest`, `ImportAnalyzerTest`, `FullDbExportImportRoundTripTest`, `DatabaseViewModelTest`, `GeneratedExitDestinationResolverTest` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew assembleDebug` → ✅ `BUILD SUCCESSFUL`.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' ./gradlew lintDebug` → ✅ `BUILD SUCCESSFUL`; solo warning toolchain/AGP preesistenti.
+- `JAVA_HOME='/Applications/Android Studio.app/Contents/jbr/Contents/Home' JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener' ./gradlew --no-daemon testDebugUnitTest` → ✅ `BUILD SUCCESSFUL`.
+- `git diff --check` → ✅ nessun errore.
+
+**Check obbligatori — terza passata:**
+| Check | Stato | Note |
+|-------|-------|------|
+| Build Gradle | ✅ ESEGUITO | `assembleDebug` verde |
+| Lint | ✅ ESEGUITO | `lintDebug` verde; warning toolchain/AGP preesistenti |
+| Warning nuovi | ✅ ESEGUITO | Nessun warning Kotlin nuovo dai file modificati; `git diff --check` verde |
+| Coerenza con planning | ✅ ESEGUITO | Nessun bulk; fix locale no-op/dirty nel perimetro |
+| Criteri di accettazione | ⚠️ PARZIALE | JVM/build/lint verdi; manca ciclo B live con questa patch |
+
+**Baseline regressione TASK-004 — terza passata:**
+- Test eseguiti: `DefaultInventoryRepositoryTest`, `ImportAnalyzerTest`, `FullDbExportImportRoundTripTest`, `DatabaseViewModelTest`, `GeneratedExitDestinationResolverTest`, full `testDebugUnitTest`.
+- Test aggiunti/aggiornati: relation-ID churn supplier/category, relation change reale, synthetic price skip con PriceHistory rappresentativa, round-trip full DB no synthetic quando la PriceHistory è completa.
+- Limiti residui: i file reali in `Downloads` non sono stati aggiunti al repo come fixture binarie; il ciclo B live con lo stesso identico file deve essere rieseguito dall’app aggiornata.
+
+**Incertezze:**
+- INCERTEZZA: manca ancora evidenza live post-terza-patch. La chiusura resta `PARTIAL` finché non si osserva `updatedProducts≈0`, `dirtyMarkedProducts=0`, `dirtyMarkedPrices=0`, `productsPushed=0`, `pricesPushed=0` sullo stesso file importato due volte.
+- INCERTEZZA: se dopo questa patch resta `supplierId` alto, il nuovo `relationDirtySample` deve mostrare i primi 5 vecchio/nuovo nome/id mascherando barcode per capire se sono cambi reali o duplicati non normalizzati.
+
+**Handoff notes:**
+- Installare questa build e ripetere il no-op gate con **`Database_test_import 2.xlsx` due volte**, non con `test_import Database1.xlsx`.
+- Se il nuovo ciclo B è verde, TASK-068 può chiudere `DONE ACCEPTABLE` senza bulk e il bulk product push va pianificato come step successivo.
+- Se resta dirty falso, usare `relationDirtySample`, `syntheticPriceCandidates`, `syntheticPriceSkippedAlreadyRepresented`, `priceRowsPendingBridgeBefore/After`.
+- Bulk product push resta vietato fino a no-op live verde.
+
 ### Esecuzione — 2026-04-27, seconda passata su no-op gate
 
 **File modificati:**
@@ -512,6 +704,16 @@ Classificare: self-skip, temporaneo, accumulo reale — **senza cancellare**.
 
 ## Review
 
+### Review autonoma — 2026-04-28, terza passata
+
+- Diff controllato: nessun cambio schema Room/Supabase, nessuna RPC/migration/RLS/trigger/publication, nessuna cancellazione outbox/sync_events, nessun bulk product push.
+- Root cause no-op: il nuovo log live spiega il grosso del falso dirty con `supplierId:5854`; la patch preserva l’ID locale esistente se il nome relazione importato è semanticamente uguale, invece di accettare un duplicato locale equivalente.
+- Price no-op: le synthetic rows non vengono più create quando la PriceHistory importata rappresenta già lo stesso prezzo; il push prezzi resta guidato dalle righe reali senza `product_price_remote_ref`.
+- TASK-067: metriche dirty preservate ed estese; test `067` mirati e repository largo verdi.
+- TASK-066: navigation non toccata; `GeneratedExitDestinationResolverTest` verde.
+- Scope: nessun refactor architetturale, nessuna dipendenza nuova, nessun path distruttivo.
+- Rischi residui: serve ciclo B live con questa build e lo stesso file due volte; outbox `815` da riclassificare dopo no-op; duplicati accent/trim/case nuovi sono mitigati lato import, non consolidati nel DB.
+
 ### Review autonoma — 2026-04-27, seconda passata
 
 - Diff controllato: nessun cambio schema Room/Supabase, nessuna RPC/migration/RLS/trigger/publication, nessuna cancellazione outbox/sync_events.
@@ -536,6 +738,26 @@ Classificare: self-skip, temporaneo, accumulo reale — **senza cancellare**.
 
 ## Fix
 
+### Fix — 2026-04-28, quinta passata
+
+- Primo run largo mirato senza `JAVA_TOOL_OPTIONS` ha fallito per attach ByteBuddy/MockK (`AttachNotSupportedException`) su `ImportAnalyzerTest` / `DatabaseViewModelTest`.
+- Correzione/verifica mirata: rieseguito lo stesso set con `JAVA_TOOL_OPTIONS='-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading'`; esito verde.
+- Primo full `testDebugUnitTest` con solo `EnableDynamicAgentLoading` ha fallito ancora per attach ByteBuddy/MockK; rieseguito full con `-XX:+StartAttachListener` aggiunto; esito verde.
+- Nessun fix codice post-test necessario sui nuovi casi bulk.
+
+### Fix — 2026-04-28, quarta passata
+
+- Primo giro mirato `FullDbExportImportRoundTripTest` ha fallito sul nuovo assert zero product push candidate: il test misurava il secondo re-import senza simulare la sync completata dopo il primo import, quindi i candidate derivavano dal ciclo A e non dal ciclo B.
+- Fix test: prima del secondo re-import JVM vengono marcati come synced i ref prodotto e prezzo creati dal primo import; cosi' l'assert misura il no-op gate vero (`productsPushed=0` / `pricesPushed=0` come assenza candidate).
+- Dopo il fix test: test mirati, `DatabaseViewModelTest`, regressione navigation, `assembleDebug`, `lintDebug`, full `testDebugUnitTest` e `git diff --check` tutti verdi.
+
+### Fix — 2026-04-28, terza passata
+
+- Primo compile/test lanciato in parallelo con un altro Gradle ha prodotto un errore KSP transitorio; riesecuzione sequenziale usata per le verifiche finali.
+- Primo compile Kotlin ha segnalato una condizione nullable spezzata su più righe nel calcolo `alreadyRepresented`; corretta con parentesi esplicite.
+- Primo round-trip mirato ha fallito perché un test storico richiedeva synthetic rows anche con PriceHistory completa. Il comportamento desiderato del task è l’opposto: con PriceHistory completa non si devono generare synthetic rows. Aggiornati i test; `RT-NOPH` continua a coprire il caso senza PriceHistory.
+- Dopo i fix: compile, test mirati, suite larga, `assembleDebug`, `lintDebug`, full `testDebugUnitTest`, `git diff --check` tutti verdi.
+
 ### Fix — 2026-04-27, seconda passata
 
 - Il batch mirato allargato ha fallito sul test storico `061 drain marks manual full sync for empty entity ids with changed count`.
@@ -558,27 +780,28 @@ Classificare: self-skip, temporaneo, accumulo reale — **senza cancellare**.
 | Campo | Valore |
 |-------|--------|
 | Stato finale | `PARTIAL` |
-| Data chiusura | 2026-04-27 |
-| Tutti i criteri ✅? | No — fix JVM applicato, ma ciclo B live aggiornato non rieseguito con la build patchata; bulk non autorizzato |
-| Rischi residui | No-op gate da ripetere con flusso full DB corretto e build aggiornata; outbox `PayloadValidation` 693 non convergente; bulk product push ancora da implementare solo dopo gate verde; price push da riclassificare dopo `updatedProducts=0` |
+| Data chiusura | 2026-04-28 |
+| Tutti i criteri ✅? | No — bulk JVM implementato e verificato, ma serve ciclo B live con stesso identico file; non dichiarare `DONE FULL` |
+| Rischi residui | No-op gate da ripetere con lo stesso identico file; outbox `syncEventOutboxPending` da riclassificare dopo no-op; bulk product push da validare live su delta reale; se resta dirty falso, usare fingerprint/classificazione, `relationDirtySample` e metriche price-aware |
 
 ---
 
 ## Riepilogo finale
 
-Execution chiusa in **PARTIAL** dopo seconda passata: fix locali no-op/dirty applicati e coperti da JVM, protezione da stale sync event nello stesso local commit aggiunta, diagnostica dirty estesa. Il bulk product push resta **non implementato** perché manca il ciclo B live verde con la build patchata.
+Execution chiusa in **PARTIAL** dopo quinta passata: synthetic price generation sugli update prodotto resta price-aware, PriceHistory prevale sui fallback sintetici, fingerprint dataset/log diagnostici sono presenti, e il bulk product push client-side e' implementato con batch bounded + fallback singolo. Mancano ancora ciclo B live con stesso file e validazione live del bulk su delta reale.
 
 ---
 
 ## Handoff
 
-- **TASK-068** è chiuso in **`PARTIAL`**: seconda passata applica fix JVM no-op/dirty e protezione stale-event, ma il ciclo B live con build patchata resta da rieseguire.
-- **Prossimo passo reale:** installare build aggiornata e riprodurre ciclo B dallo stesso file usando il flusso full DB import corretto da `DatabaseScreen`, non il path share/preview generica.
-- Se il ciclo B resta non no-op, leggere i nuovi campi log `productDirtyReasons`, `productDirtyReasonSample`, `priceDirtyReason`, `priceRowsPendingBridgeAfter`.
-- **Nessun** bulk product push **prima** del risultato classificato del **ciclo B**.
+- **TASK-068** è chiuso in **`PARTIAL`**: quinta passata implementa bulk product push JVM/offline-safe e conserva i fix no-op/dirty price-aware, ma il ciclo B live con questa build resta da rieseguire.
+- **Prossimo passo reale:** installare build aggiornata e riprodurre ciclo B con lo stesso identico file due volte, con sync completa e quiet window 30-60s tra ciclo A e ciclo B.
+- Non usare `test_import Database1.xlsx` come secondo ciclo di no-op contro `Database_test_import 2.xlsx`: sono dataset diversi.
+- Se il ciclo B resta non no-op, leggere i nuovi campi log `fileProductCount`, `filePriceHistoryCount`, `dbProductCountBefore`, `dbPriceHistoryCountBefore`, `importFingerprintShort`, `dbSnapshotFingerprintShort`, `classificazione_risultato`, `relationDirtySample`, `relationDirtyRealChangedCount`, `relationDirtySemanticEquivalentCount`, `relationDirtyUnknownCount`, `priceDirtyFromPriceFieldChange`, `priceDirtyFromSyntheticFallback`, `priceDirtySkippedBecauseNonPriceProductUpdate`, `priceRowsPendingBridgeBefore`, `priceRowsPendingBridgeAfter`.
+- Bulk product push e' gia' implementato lato client su istruzione esplicita utente; non dichiararlo validato live finche' non passa un ciclo su delta reale e un ciclo B identico senza push.
 - **Non** cambiare schema Room/Supabase/RPC/RLS/trigger/publication nel perimetro del task senza follow-up dedicato.
 - **Non** cancellare outbox/`sync_events`; **non** reset remoto.
-- **Percorso singolo** da **preservare** come **fallback** (fino a validazione bulk + flag).
+- **Percorso singolo** preservato come **fallback** e isolabile tramite costante interna.
 - **Ottimizzazione price** complessa **fuori perimetro** se richiede schema/RPC/backend — task separato.
 - **UX**: stage/copy già migliorati per push prodotti, push/pull prezzi e drain eventi sync; nessun redesign ampio.
 - **Evidenza futura:** matrice log ciclo B con `import_dirty_marking`, `phase_metrics`, `sync_phase_durations`, `sync_events_summary`, senza segreti e senza sample massivi.
